--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Rhythm Realm Music</title>
     <link rel="stylesheet" href="style3d.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/locomotive-scroll@3.5.4/dist/locomotive-scroll.css">
 </head>
@@ -90,7 +90,42 @@
         crossorigin="anonymous" referrerpolicy="no-referrer"></script>
     <script src="script3d.js"></script>
     <footer>
-        <h3></h3>
+<!--       ad -->
+        <script type="text/javascript">
+	atOptions = {
+		'key' : '325999b0e42b313f5301d3e26a250cd9',
+		'format' : 'iframe',
+		'height' : 90,
+		'width' : 728,
+		'params' : {}
+	};
+	document.write('<scr' + 'ipt type="text/javascript" src="http' + (location.protocol === 'https:' ? 's' : '') + '://www.profitabledisplaynetwork.com/325999b0e42b313f5301d3e26a250cd9/invoke.js"></scr' + 'ipt>');
+</script>
+<!--         ad -->
+        <!--       ad -->
+        <script type="text/javascript">
+	atOptions = {
+		'key' : '325999b0e42b313f5301d3e26a250cd9',
+		'format' : 'iframe',
+		'height' : 90,
+		'width' : 728,
+		'params' : {}
+	};
+	document.write('<scr' + 'ipt type="text/javascript" src="http' + (location.protocol === 'https:' ? 's' : '') + '://www.profitabledisplaynetwork.com/325999b0e42b313f5301d3e26a250cd9/invoke.js"></scr' + 'ipt>');
+</script>
+<!--         ad -->
+<!--         ad -->
+        <script type="text/javascript">
+	atOptions = {
+		'key' : 'e04b2d927b3550f9a731d59a8285327f',
+		'format' : 'iframe',
+		'height' : 50,
+		'width' : 320,
+		'params' : {}
+	};
+	document.write('<scr' + 'ipt type="text/javascript" src="http' + (location.protocol === 'https:' ? 's' : '') + '://www.profitabledisplaynetwork.com/e04b2d927b3550f9a731d59a8285327f/invoke.js"></scr' + 'ipt>');
+</script>
+<!--         ad -->
     </footer>
 </body>
 
