--- a/index1.html
+++ b/index1.html
@@ -97,6 +97,30 @@
             <h2>Reels & TikTok</h2>
             <p>Tending reels & Tiktok songs </p>
         </div>
+        <!--     ads -->
+    <script type="text/javascript">
+	atOptions = {
+		'key' : 'f5fd4a6351ef4f0b65300bc4466e7cfb',
+		'format' : 'iframe',
+		'height' : 250,
+		'width' : 300,
+		'params' : {}
+	};
+	document.write('<scr' + 'ipt type="text/javascript" src="http' + (location.protocol === 'https:' ? 's' : '') + '://www.profitabledisplaynetwork.com/f5fd4a6351ef4f0b65300bc4466e7cfb/invoke.js"></scr' + 'ipt>');
+</script>
+<!--     ads -->
+        <!--     ads -->
+    <script type="text/javascript">
+	atOptions = {
+		'key' : 'f5fd4a6351ef4f0b65300bc4466e7cfb',
+		'format' : 'iframe',
+		'height' : 250,
+		'width' : 300,
+		'params' : {}
+	};
+	document.write('<scr' + 'ipt type="text/javascript" src="http' + (location.protocol === 'https:' ? 's' : '') + '://www.profitabledisplaynetwork.com/f5fd4a6351ef4f0b65300bc4466e7cfb/invoke.js"></scr' + 'ipt>');
+</script>
+<!--     ads -->
         <!-- <div class="audio audio1">
             <img src="images/img (6).png" alt="">
             <h2>Top 50 - India</h2>
@@ -139,5 +163,17 @@
       integrity="sha384-pprn3073KE6tl6bjs2QrFaJGz5/SUsLqktiwsUTF55Jfv3qYSDhgCecCxMW52nD2"
       crossorigin="anonymous"
     ></script>
+<!--     ads -->
+    <script type="text/javascript">
+	atOptions = {
+		'key' : 'f5fd4a6351ef4f0b65300bc4466e7cfb',
+		'format' : 'iframe',
+		'height' : 250,
+		'width' : 300,
+		'params' : {}
+	};
+	document.write('<scr' + 'ipt type="text/javascript" src="http' + (location.protocol === 'https:' ? 's' : '') + '://www.profitabledisplaynetwork.com/f5fd4a6351ef4f0b65300bc4466e7cfb/invoke.js"></scr' + 'ipt>');
+</script>
+<!--     ads -->
   </body>
 </html>
