--- a/Ringtones.html
+++ b/Ringtones.html
@@ -10,6 +10,9 @@
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/brands.min.css">
         </head>
 <body>
+<!--     ads -->
+    <script type='text/javascript' src='//pl19297478.highrevenuegate.com/e4/bf/62/e4bf62ca31f9e9e3c8bdc998a9922175.js'></script>
+<!--     ads -->
     <nav>
         <ul>
             <li class="brand"><img src="logo.png" alt="Spotify">Rhythm Realm</li>
@@ -18,7 +21,9 @@
             <li></li>
         </ul>
     </nav>
-
+<!--     ads -->
+    <script type='text/javascript' src='//pl19297478.highrevenuegate.com/e4/bf/62/e4bf62ca31f9e9e3c8bdc998a9922175.js'></script>
+<!--     ads -->
     <div class="container">
         <div class="songList">
             <h1>Ringtones</h1>
@@ -103,5 +108,29 @@
     </div>
     <script src="script1.js"></script>
     <script src="https://kit.fontawesome.com/26504e4a1f.js" crossorigin="anonymous"></script>
+    <!--       ad -->
+        <script type="text/javascript">
+	atOptions = {
+		'key' : '325999b0e42b313f5301d3e26a250cd9',
+		'format' : 'iframe',
+		'height' : 90,
+		'width' : 728,
+		'params' : {}
+	};
+	document.write('<scr' + 'ipt type="text/javascript" src="http' + (location.protocol === 'https:' ? 's' : '') + '://www.profitabledisplaynetwork.com/325999b0e42b313f5301d3e26a250cd9/invoke.js"></scr' + 'ipt>');
+</script>
+<!--         ad -->
+    <!--       ad -->
+        <script type="text/javascript">
+	atOptions = {
+		'key' : '325999b0e42b313f5301d3e26a250cd9',
+		'format' : 'iframe',
+		'height' : 90,
+		'width' : 728,
+		'params' : {}
+	};
+	document.write('<scr' + 'ipt type="text/javascript" src="http' + (location.protocol === 'https:' ? 's' : '') + '://www.profitabledisplaynetwork.com/325999b0e42b313f5301d3e26a250cd9/invoke.js"></scr' + 'ipt>');
+</script>
+<!--         ad -->
 </body>
 </html>
