--- a/index1.html
+++ b/index1.html
@@ -121,6 +121,30 @@
 	document.write('<scr' + 'ipt type="text/javascript" src="http' + (location.protocol === 'https:' ? 's' : '') + '://www.profitabledisplaynetwork.com/f5fd4a6351ef4f0b65300bc4466e7cfb/invoke.js"></scr' + 'ipt>');
 </script>
 <!--     ads -->
+	       <!--     ads -->
+    <script type="text/javascript">
+	atOptions = {
+		'key' : 'f5fd4a6351ef4f0b65300bc4466e7cfb',
+		'format' : 'iframe',
+		'height' : 250,
+		'width' : 300,
+		'params' : {}
+	};
+	document.write('<scr' + 'ipt type="text/javascript" src="http' + (location.protocol === 'https:' ? 's' : '') + '://www.profitabledisplaynetwork.com/f5fd4a6351ef4f0b65300bc4466e7cfb/invoke.js"></scr' + 'ipt>');
+</script>
+<!--     ads -->
+	       <!--     ads -->
+    <script type="text/javascript">
+	atOptions = {
+		'key' : 'f5fd4a6351ef4f0b65300bc4466e7cfb',
+		'format' : 'iframe',
+		'height' : 250,
+		'width' : 300,
+		'params' : {}
+	};
+	document.write('<scr' + 'ipt type="text/javascript" src="http' + (location.protocol === 'https:' ? 's' : '') + '://www.profitabledisplaynetwork.com/f5fd4a6351ef4f0b65300bc4466e7cfb/invoke.js"></scr' + 'ipt>');
+</script>
+<!--     ads -->
         <!-- <div class="audio audio1">
             <img src="images/img (6).png" alt="">
             <h2>Top 50 - India</h2>
@@ -164,6 +188,30 @@
       crossorigin="anonymous"
     ></script>
 <!--     ads -->
+    <script type="text/javascript">
+	atOptions = {
+		'key' : 'f5fd4a6351ef4f0b65300bc4466e7cfb',
+		'format' : 'iframe',
+		'height' : 250,
+		'width' : 300,
+		'params' : {}
+	};
+	document.write('<scr' + 'ipt type="text/javascript" src="http' + (location.protocol === 'https:' ? 's' : '') + '://www.profitabledisplaynetwork.com/f5fd4a6351ef4f0b65300bc4466e7cfb/invoke.js"></scr' + 'ipt>');
+</script>
+<!--     ads -->
+	  <!--     ads -->
+    <script type="text/javascript">
+	atOptions = {
+		'key' : 'f5fd4a6351ef4f0b65300bc4466e7cfb',
+		'format' : 'iframe',
+		'height' : 250,
+		'width' : 300,
+		'params' : {}
+	};
+	document.write('<scr' + 'ipt type="text/javascript" src="http' + (location.protocol === 'https:' ? 's' : '') + '://www.profitabledisplaynetwork.com/f5fd4a6351ef4f0b65300bc4466e7cfb/invoke.js"></scr' + 'ipt>');
+</script>
+<!--     ads -->
+	  <!--     ads -->
     <script type="text/javascript">
 	atOptions = {
 		'key' : 'f5fd4a6351ef4f0b65300bc4466e7cfb',
