--- a/index1.html
+++ b/index1.html
@@ -69,7 +69,7 @@
       </nav>
       <div class="main">
         <div class="audio audio1">
-           <a href="./myte.html"><img src="images/img (1).png" alt=""><i class="fa-duotone fa-download"></i></a> 
+           <a href="./myte.html"><img src="logo.png" alt=""><i class="fa-duotone fa-download"></i></a> 
             <h2>My YouTube Edits</h2>
             <p>Your daily update of the upload tracks on my  channel </p>
         </div>
@@ -86,13 +86,13 @@
             <p>New trending songs - International</p>
         </div> -->
         <div class="audio audio1">
-          <a href="./ncm.html"><img src="images/img (1).png" alt=""></a> 
+          <a href="./ncm.html"><img src="./images/ncs.png" alt=""></a> 
 
             <h2>No Copyright Music </h2>
             <p>Keep calm and focus with ambient and post-rock music.</p>
         </div>
         <div class="audio audio1">
-          <a href="./r&t.html"><img src="images/img (1).png" alt=""></a> 
+          <a href="./r&t.html"><img src="https://media.graphassets.com/resize=fit:clip,height:600,/output=format:webp/GVLMUmJTcinNACY4m7tf" alt=""></a> 
 
             <h2>Reels & TikTok</h2>
             <p>Tending reels & Tiktok songs </p>
