--- a/index1.html
+++ b/index1.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="style13.css" />
     <link
       rel="shortcut icon"
-      href="images/icons8-spotify-48.png"
+      href="logo.png"
       type="image/x-icon"
     />
     <link
